--- a/catalogs/catolog/templates/authors/author_detail.html
+++ b/catalogs/catolog/templates/authors/author_detail.html
@@ -1,13 +1,19 @@
 {% extends "base_generic.html" %} {% block content %}
 <h1>Author : {{author.name}}</h1>
 <p>{{ author.date_of_birth }}</p>
+<p>{{ now }}</p>
+<p>
+  <a href = {% url "author_update" author.id %}> Edit</a>
+  <a href = {% url "author_delete" author.id %} style = "color:red;margin-left:6rem;"> Delete</a>
+</p>
+
 
 <div style="margin-top: 50px">
-  {% if author.book_set.all %}
+  {% if author.books_set.all %}
   <div>
     <h2>Books written by {{ author.name }}</h2>
     <ul>
-      {% for book in author.book_set.all %}
+      {% for book in author.books_set.all %}
       <li><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></li>
       {% endfor %}
     </ul>
