--- a/catalogs/catolog/templates/authors/authors.html
+++ b/catalogs/catolog/templates/authors/authors.html
@@ -3,10 +3,15 @@
 {% endblock %} {% block content %}
 
 <h1>All Authors</h1>
+
 <p>Here is a list of all authors in the library:</p>
 {% for author in authors %}
 <a href="{{ author.get_absolute_url }}">
   {{ author.name }} ({{ author.date_of_birth }})
 </a>
 <hr />
-{% endfor %} {% endblock %}
+
+{% endfor %} 
+
+<a href = {% url "author_create" %}>Create new Author </a>
+{% endblock %}
