--- a/catalogs/catolog/templates/base_generic.html
+++ b/catalogs/catolog/templates/base_generic.html
@@ -22,11 +22,21 @@
         <div class="col-sm-2">
           {% block sidebar %}
           <ul class="sidebar-nav">
+            {% if user.is_authenticated %}
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url "books"%}">All books</a></li>
+            <li><a href="{% url "all-borrowed"%}">All borrowed</a></li>
             <li><a href="{% url "authors"%}">All authors</a></li>
             <li><a href="{% url "languages"%}">All languages</a></li>
             <li><a href="{% url "genres"%}">All genres</a></li>
+            
+            <li>User: {{ user.get_username }}</li>
+          
+            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+            {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            {% endif %}
           </ul>
           {% endblock %}
         </div>
