--- a/catalogs/catolog/templates/index.html
+++ b/catalogs/catolog/templates/index.html
@@ -15,4 +15,9 @@
   <li><strong>Authors:</strong> {{ num_authors }}</li>
   <li><strong>Languages :</strong> {{ num_language }}</li>
 </ul>
+
+<p>
+  You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{%
+  else %} times{% endif %}.
+</p>
 {% endblock %}
