--- a/catalogs/catolog/templates/languages/languages.html
+++ b/catalogs/catolog/templates/languages/languages.html
@@ -2,11 +2,21 @@
 <title>All languages</title>
 {% endblock %} {% block content %}
 <h1>All languages</h1>
+<a href = {% url "language_create" %}>Create new language</a>
+
 {% if languages %}
 <p>Here is a list of all languages in the library:</p>
 {% for language in languages %}
 <h2>{{ language.name }}</h2>
-<p>Publication year: {{ language.created_at }}</p>
+<p style = "display:flex;">
+    <span>
+        Publication year: {{ language.created_at }}
+    </span>
+    <span style = "margin:auto;">
+        <a href = {% url "language_update" language.id %}>Edit</a>
+        <a href = {% url "language_delete" language.id %} style = "color:red; margin-left:3rem;">Delete</a>
+    </span>
+</p>
 <hr />
 {% endfor %} {% else %}
 <p>There are no languages in the library.</p>
